syntax = "proto3";
package gpt;
option go_package="api/gpt";

message ChatRequest{
  int64 chatId  = 1;
  string message = 2;
}
message ChatResponse{
  int64 chatId = 1;
  string message = 2;
}

message ImageRequest{
  string message = 1;
}
message ImageResponse{
  string message = 1;
}


service GptService {
  rpc Chat(stream ChatRequest)returns (stream ChatResponse);
  rpc GenerateImage(ImageRequest)returns (ImageResponse);
}